marquee tag add

--- a/projects/calculator/main.html
+++ b/projects/calculator/main.html
@@ -13,6 +13,9 @@
         <div class="calculator">
             <div class="display">
                 <div class="content">
+                    <marquee class="marquee_tag" id="marquee" width="325px">
+                        <h3 id="text">Welcome to calculator !</h3>
+                    </marquee>
                     <div class="input"></div>
                     <div class="output"></div>
                 </div>
@@ -21,8 +24,8 @@
                 <div data-key="clear" class="key action">
                     <span>AC</span>
                 </div>
-                <div data-key="brackets" class="key action">
-                    <span>( )</span>
+                <div data-key="backspace" class="key action">
+                    <span>&#8810;</span>
                 </div>
                 <div data-key="%" class="key percent">
                     <span>%</span>
@@ -66,8 +69,8 @@
                 <div data-key="+" class="key operator">
                     <span>+</span>
                 </div>
-                <div data-key="backspace" class="key action">
-                    <span>&lt;</span>
+                <div data-key="brackets" class="key action">
+                    <span>( )</span>
                 </div>
                 <div data-key="0" class="key">
                     <span>0</span>
