--- a/projects/budget/index.html
+++ b/projects/budget/index.html
@@ -16,10 +16,13 @@
     <div class="container">
         <!-- ===== Upper section coding ===== -->
         <div class="row">
+            <!-- ===== Budget value section ===== -->
             <div class="col-12 Budget_value">
+                <!-- ===== Main div ===== -->
                 <div class="main_div">
                     <h1 class="main_heading">Budget Application</h1>
                     <div class="row">
+                        <!-- ===== Budget set value form ===== -->
                         <div class="col-5 budget_set_value">
                             <form class="form">
                                 <h5 class="heading">Budget heading</h5>
@@ -28,6 +31,7 @@
                             </form>
                         </div>
                         <div class="col-1"></div>
+                        <!-- ===== Product set value form ===== -->
                         <div class="col-6 product_set_value">
                             <form class="form">
                                 <h5 class="heading">Budget expance</h5>
@@ -45,14 +49,17 @@
         <div class="row">
             <div class="col-12 main_middle">
                 <div class="row ">
+                    <!-- Total budget -->
                     <div class="col-4 middle_total">
                         <h5>Totale budget</h5>
                         <p id="total-budget">00</p>
                     </div>
+                    <!-- Total expense -->
                     <div class="col-4 middle_total">
                         <h5>Totale Expence</h5>
                         <p id="expence">00</p>
                     </div>
+                    <!-- Remaining balance -->
                     <div class="col-4 middle_total">
                         <h5>Totale Balance</h5>
                         <p id="balance">00</p>
@@ -72,6 +79,7 @@
 
     <script src="js/index.js"></script>
     <script src="js/all.min.js"></script>
+
 </body>
 
 </html>
